add signup page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body{
 .row{
     background: white;
     border-radius: 30px;
+    box-shadow: 12px 12px 22px grey ;
 
 }
 img{
@@ -25,3 +26,12 @@ img{
     border-radius: 4px;
     font-weight: bold;
 }
+
+.btn1:hover{
+    background-color: white;
+    border: 1px solid ;
+    color: black;
+}
+
+
+
