--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,10 @@ body{
     
   }
   
-  .navbar{
+  /* add nav bar */
+  /* .navbar{
     background: rgba(0, 0, 0, 0.3);
-  }
+  } */
   
   .video-background {
     position: relative;
@@ -45,10 +46,7 @@ body{
   
    /* video  */
   
-  .row, .container-fluid {
-    margin-left: 0px!important;
-    margin-right: 0px!important;
-    }
+
     .video-wrap {
       clip: rect(0, auto, auto, 0);
       position: absolute;
@@ -56,6 +54,7 @@ body{
       left: 0;
       width: 100%;
       height: 100%;
+      overflow: hidden;
     }
     #video {
       position: fixed;
@@ -81,7 +80,7 @@ body{
       height: auto;
       z-index: -100;
       transform: translateX(-50%) translateY(-50%);
-      background: url('') no-repeat;
+      background: no-repeat; 
       background-size: cover;
       transition: 1s opacity;
     }
